--- a/public/css/app.css
+++ b/public/css/app.css
@@ -908,6 +908,10 @@ select {
   top: 1.5rem;
 }
 
+.isolate {
+  isolation: isolate;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -1002,6 +1006,11 @@ select {
   margin-right: -1rem;
 }
 
+.-my-1 {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+}
+
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1042,11 +1051,6 @@ select {
   margin-bottom: auto;
 }
 
-.-my-1 {
-  margin-top: -0.25rem;
-  margin-bottom: -0.25rem;
-}
-
 .-mb-4 {
   margin-bottom: -1rem;
 }
@@ -1057,6 +1061,10 @@ select {
 
 .-ml-px {
   margin-left: -1px;
+}
+
+.-ms-1 {
+  margin-inline-start: -0.25rem;
 }
 
 .-mt-7 {
@@ -1101,6 +1109,14 @@ select {
 
 .me-6 {
   margin-inline-end: 1.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
 }
 
 .ml-2 {
@@ -1179,16 +1195,16 @@ select {
   margin-top: auto;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.me-1 {
+  margin-inline-end: 0.25rem;
 }
 
-.ml-12 {
-  margin-left: 3rem;
+.ml-auto {
+  margin-left: auto;
 }
 
-.-ms-1 {
-  margin-inline-start: -0.25rem;
+.-ms-0\.5 {
+  margin-inline-start: -0.125rem;
 }
 
 .line-clamp-\[--line-clamp\] {
@@ -1262,6 +1278,10 @@ select {
   height: 5rem;
 }
 
+.h-3\.5 {
+  height: 0.875rem;
+}
+
 .h-32 {
   height: 8rem;
 }
@@ -1310,8 +1330,8 @@ select {
   height: 100vh;
 }
 
-.h-3\.5 {
-  height: 0.875rem;
+.h-96 {
+  height: 24rem;
 }
 
 .min-h-full {
@@ -1344,6 +1364,10 @@ select {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-3\.5 {
+  width: 0.875rem;
 }
 
 .w-4 {
@@ -1403,8 +1427,8 @@ select {
   width: 100vw;
 }
 
-.w-3\.5 {
-  width: 0.875rem;
+.w-32 {
+  width: 8rem;
 }
 
 .min-w-0 {
@@ -1413,10 +1437,6 @@ select {
 
 .min-w-48 {
   min-width: 12rem;
-}
-
-.min-w-full {
-  min-width: 100%;
 }
 
 .min-w-\[theme\(spacing\.4\)\] {
@@ -1429,6 +1449,10 @@ select {
 
 .min-w-\[theme\(spacing\.6\)\] {
   min-width: 1.5rem;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .\!max-w-2xl {
@@ -1566,6 +1590,10 @@ select {
   max-width: 20rem;
 }
 
+.max-w-none {
+  max-width: none;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1575,6 +1603,10 @@ select {
 }
 
 .flex-grow {
+  flex-grow: 1;
+}
+
+.grow {
   flex-grow: 1;
 }
 
@@ -1719,6 +1751,10 @@ select {
           user-select: all;
 }
 
+.resize-none {
+  resize: none;
+}
+
 .resize {
   resize: both;
 }
@@ -1762,6 +1798,14 @@ select {
 
 .grid-cols-\[repeat\(auto-fit\2c minmax\(0\2c 1fr\)\)\] {
   grid-template-columns: repeat(auto-fit,minmax(0,1fr));
+}
+
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(7\2c minmax\(theme\(spacing\.7\)\2c 1fr\)\)\] {
+  grid-template-columns: repeat(7,minmax(1.75rem,1fr));
 }
 
 .grid-rows-\[1fr_auto_1fr\] {
@@ -1914,6 +1958,11 @@ select {
   row-gap: 1px;
 }
 
+.gap-x-2\.5 {
+  -moz-column-gap: 0.625rem;
+       column-gap: 0.625rem;
+}
+
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
@@ -1956,6 +2005,60 @@ select {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.-space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(-0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(-0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(-0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-1rem * var(--tw-space-x-reverse));
+  margin-left: calc(-1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(-1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(-1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-7 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-1.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(-1.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.-space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(-2rem * var(--tw-space-x-reverse));
+  margin-left: calc(-2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1980,6 +2083,10 @@ select {
   align-self: center;
 }
 
+.self-stretch {
+  align-self: stretch;
+}
+
 .justify-self-start {
   justify-self: start;
 }
@@ -1990,6 +2097,10 @@ select {
 
 .justify-self-center {
   justify-self: center;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-hidden {
@@ -2108,16 +2219,16 @@ select {
   border-left-width: 4px;
 }
 
+.border-r {
+  border-right-width: 1px;
+}
+
 .border-s {
   border-inline-start-width: 1px;
 }
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-r {
-  border-right-width: 1px;
 }
 
 .border-none {
@@ -2139,6 +2250,11 @@ select {
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
+}
+
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
@@ -2156,11 +2272,6 @@ select {
 
 .border-transparent {
   border-color: transparent;
-}
-
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
 .bg-gray-100 {
@@ -2275,6 +2386,19 @@ select {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
 }
 
+.bg-white\/5 {
+  background-color: rgb(255 255 255 / 0.05);
+}
+
+.\!bg-gray-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.bg-black\/50 {
+  background-color: rgb(0 0 0 / 0.5);
+}
+
 .\!bg-none {
   background-image: none !important;
 }
@@ -2363,6 +2487,11 @@ select {
   padding-right: 0px;
 }
 
+.px-0\.5 {
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2401,6 +2530,11 @@ select {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .py-1 {
@@ -2466,16 +2600,6 @@ select {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
 }
 
 .pb-1 {
@@ -2710,16 +2834,24 @@ select {
   line-height: 1.5rem;
 }
 
-.leading-relaxed {
-  line-height: 1.625;
-}
-
 .leading-7 {
   line-height: 1.75rem;
 }
 
+.leading-relaxed {
+  line-height: 1.625;
+}
+
+.leading-loose {
+  line-height: 2;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
 }
 
 .tracking-wider {
@@ -2730,10 +2862,6 @@ select {
   letter-spacing: 0.1em;
 }
 
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
@@ -2742,6 +2870,16 @@ select {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-400 {
@@ -2762,6 +2900,10 @@ select {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700\/50 {
+  color: rgb(55 65 81 / 0.5);
 }
 
 .text-gray-800 {
@@ -2849,20 +2991,6 @@ select {
   color: rgb(133 77 14 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-700\/50 {
-  color: rgb(55 65 81 / 0.5);
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -2886,6 +3014,10 @@ select {
 
 .opacity-75 {
   opacity: 0.75;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .shadow {
@@ -2945,6 +3077,24 @@ select {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.ring {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .ring-inset {
   --tw-ring-inset: inset;
 }
@@ -2964,6 +3114,10 @@ select {
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity, 1));
 }
 
+.ring-gray-600\/10 {
+  --tw-ring-color: rgb(75 85 99 / 0.1);
+}
+
 .ring-gray-950\/10 {
   --tw-ring-color: rgb(3 7 18 / 0.1);
 }
@@ -2977,8 +3131,8 @@ select {
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
 
-.ring-gray-600\/10 {
-  --tw-ring-color: rgb(75 85 99 / 0.1);
+.ring-gray-900\/10 {
+  --tw-ring-color: rgb(17 24 39 / 0.1);
 }
 
 .ring-opacity-5 {
@@ -3221,6 +3375,10 @@ select {
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-gray-700\/75:hover {
+  color: rgb(55 65 81 / 0.75);
+}
+
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
@@ -3259,10 +3417,6 @@ select {
 .hover\:text-red-900:hover {
   --tw-text-opacity: 1;
   color: rgb(127 29 29 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-gray-700\/75:hover {
-  color: rgb(55 65 81 / 0.75);
 }
 
 .hover\:shadow-lg:hover {
@@ -3435,6 +3589,16 @@ select {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-1:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-inset:focus-visible {
+  --tw-ring-inset: inset;
 }
 
 .focus-visible\:ring-gray-400\/40:focus-visible {
@@ -3771,6 +3935,10 @@ select {
     border-radius: 0.75rem;
   }
 
+  .sm\:p-10 {
+    padding: 2.5rem;
+  }
+
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -3940,6 +4108,10 @@ select {
     border-radius: 0.75rem;
   }
 
+  .md\:p-20 {
+    padding: 5rem;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -4001,6 +4173,14 @@ select {
     display: none;
   }
 
+  .lg\:h-full {
+    height: 100%;
+  }
+
+  .lg\:max-w-xs {
+    max-width: 20rem;
+  }
+
   .lg\:-translate-x-full {
     --tw-translate-x: -100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -4018,6 +4198,10 @@ select {
 
   .lg\:grid-cols-\[--cols-lg\] {
     grid-template-columns: var(--cols-lg);
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:gap-8 {
@@ -4257,6 +4441,10 @@ select {
     background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
   }
 
+  .dark\:bg-gray-400\/10 {
+    background-color: rgb(156 163 175 / 0.1);
+  }
+
   .dark\:bg-gray-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
@@ -4319,8 +4507,13 @@ select {
     background-color: rgb(255 255 255 / 0.05);
   }
 
-  .dark\:bg-gray-400\/10 {
-    background-color: rgb(156 163 175 / 0.1);
+  .dark\:\!bg-gray-700 {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1)) !important;
+  }
+
+  .dark\:bg-gray-900\/30 {
+    background-color: rgb(17 24 39 / 0.3);
   }
 
   .dark\:bg-gradient-to-bl {
@@ -4340,6 +4533,10 @@ select {
   .dark\:text-gray-300 {
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-gray-300\/50 {
+    color: rgb(209 213 219 / 0.5);
   }
 
   .dark\:text-gray-400 {
@@ -4382,10 +4579,6 @@ select {
     color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
 
-  .dark\:text-gray-300\/50 {
-    color: rgb(209 213 219 / 0.5);
-  }
-
   .dark\:shadow-none {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
@@ -4400,6 +4593,10 @@ select {
 
   .dark\:ring-inset {
     --tw-ring-inset: inset;
+  }
+
+  .dark\:ring-gray-400\/20 {
+    --tw-ring-color: rgb(156 163 175 / 0.2);
   }
 
   .dark\:ring-gray-700 {
@@ -4419,8 +4616,13 @@ select {
     --tw-ring-color: rgb(255 255 255 / 0.05);
   }
 
-  .dark\:ring-gray-400\/20 {
-    --tw-ring-color: rgb(156 163 175 / 0.2);
+  .dark\:ring-gray-50\/10 {
+    --tw-ring-color: rgb(249 250 251 / 0.1);
+  }
+
+  .dark\:ring-gray-900 {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(17 24 39 / var(--tw-ring-opacity, 1));
   }
 
   .dark\:placeholder\:text-gray-500::-moz-placeholder {
@@ -4486,6 +4688,10 @@ select {
     color: rgb(209 213 219 / var(--tw-text-opacity, 1));
   }
 
+  .dark\:hover\:text-gray-300\/75:hover {
+    color: rgb(209 213 219 / 0.75);
+  }
+
   .dark\:hover\:text-gray-400:hover {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity, 1));
@@ -4494,10 +4700,6 @@ select {
   .dark\:hover\:text-white:hover {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-  }
-
-  .dark\:hover\:text-gray-300\/75:hover {
-    color: rgb(209 213 219 / 0.75);
   }
 
   .dark\:hover\:ring-white\/20:hover {
@@ -4592,13 +4794,13 @@ select {
     background-color: rgb(255 255 255 / 0.05);
   }
 
+  .dark\:focus-visible\:text-gray-300\/75:focus-visible {
+    color: rgb(209 213 219 / 0.75);
+  }
+
   .dark\:focus-visible\:text-gray-400:focus-visible {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-  }
-
-  .dark\:focus-visible\:text-gray-300\/75:focus-visible {
-    color: rgb(209 213 219 / 0.75);
   }
 
   .dark\:active\:bg-gray-300:active {
@@ -4741,6 +4943,10 @@ select {
 
 .\[\&_\.choices\\_\\_inner\]\:ps-0 .choices__inner {
   padding-inline-start: 0px;
+}
+
+.\[\&_\.filepond--root\]\:font-sans .filepond--root {
+  font-family: Figtree, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .\[\&_optgroup\]\:bg-white optgroup {
